// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component renders empty given no tabs 1`] = `
<div>
  <p />
</div>
`;

exports[`Tabs Component renders the first tab by default 1`] = `
<div>
  <p>
    sing
    dance
  </p>
</div>
`;

exports[`renders the UI as expected 1`] = `
<div>
  <h1>
     
    Alfredo
     
    Salazar
     
  </h1>
  <div>
    <p>
      program
    </p>
  </div>
  <div>
    <p>
      dance
    </p>
  </div>
  <div>
    <p>
      sing
    </p>
  </div>
  <div>
    <p>
      swim
    </p>
  </div>
  <div>
    <p>
      read
    </p>
  </div>
  <button
    onClick={[Function]}
  >
    Change Name
  </button>
</div>
`;
